[package]
name = "raw-btc-tx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
serde = "1.0.203"
serde-wasm-bindgen = "0.6.5"
hex = "0.4.3"
sha2 = "0.10.8"
bech32 = "0.11.0"
secp256k1 = "0.29.0"
bs58 = "0.5.1"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]